--- a/src/projects/create/components/IncompleteProjectConfirmation.scss
+++ b/src/projects/create/components/IncompleteProjectConfirmation.scss
@@ -1,51 +1,55 @@
+// Incomplete page styles
+@import 'layout';
 @import 'tc-includes';
 
 .IncompleteProjectConfirmation {
   width: 100%;
-  min-height: calc(100vh - 40px);
-  background: #fafafb;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: -60px;// to align top with bottom of the header
-  padding: 20px;
+
   .header {
-  	position: absolute;
-  	left: 40px;
-  	top: 40px;
+    @extend .wizardHeader;
+    width: 100%;
   }
+
   h3 {
-  	@include roboto-light;
-  	margin-top: 8 * $base_unit;
+    @include roboto-light;
+    margin-top: 8 * $base_unit;
     margin-bottom: 12 * $base_unit;
-  	color: $tc-black;
-  	line-height: 40px;
-  	font-size: 36px;
+    color: $tc-black;
+    line-height: 40px;
+    font-size: 36px;
   }
+
   h5 {
-  	@include roboto-medium;
-  	margin-bottom: 4 * $base_unit;
-  	color: $tc-gray-80;
-  	line-height: 30px;
-  	font-size: 20px;
+    @include roboto-medium;
+    margin-bottom: 4 * $base_unit;
+    color: $tc-gray-80;
+    line-height: 30px;
+    font-size: 20px;
   }
+
   p {
-  	@include roboto;
-  	margin-bottom: 10 * $base_unit;
-  	color: $tc-gray-60;
-  	line-height: 25px;
-  	font-size: 15px;
+    @include roboto;
+    margin-bottom: 10 * $base_unit;
+    color: $tc-gray-60;
+    line-height: 25px;
+    font-size: 15px;
   }
+
   .actions {
-  	button {
-  		display: block;
-  		margin: 0 auto; 
-  	}
+    button {
+      display: block;
+      margin: 0 auto;
+    }
+
     button + button {
       margin-top: 4 * $base_unit;
     }
   }
 }
+
 .Footer {
   position: relative;
 }
