--- a/src/projects/create/components/SelectProduct.scss
+++ b/src/projects/create/components/SelectProduct.scss
@@ -1,43 +1,17 @@
+// Product category page
+
+@import 'layout';
 @import 'tc-includes';
 
 .headerSelectProduct {
-  display: flex;
-  justify-content: space-between;
-  position: absolute;
-  top: 25px;
-  left: 20px;
-  width: calc(100% - 40px);// 20px for left absolute position, 20px for padding around button in the  header
-  .tc-btn-default img {
-    margin-right: 10px;
-  }
+  @extend .wizardHeader;
 }
 
 .SelectProduct {
-  @include tc-body;
-  color: $tc-gray-50;
-  text-align: center;
-  max-width: 860px;
-  /*margin: 0 auto;
-  margin-top: -20px;// to align top with bottom of the header*/
-  position: relative;
-  min-height: calc(100vh - 50px);
-  margin: -30px auto 0;
-  padding-bottom: 90px;
-  a, a:visited, a:hover, a:active{
-    color: $tc-dark-blue;
-    cursor: pointer;
-  }
-  a:hover {
-    text-decoration: underline;
-  }
+  @extend .wizardCardContainer;
 
   h1 {
-    @include tc-heading;
-    @include roboto-light;
-    color: $tc-black;
-    margin-bottom: 73px;
-    font-size: 36px;
-    line-height: 40px;
+    @extend .wizardHeadline;
 
     + h2 {
       font-size: 15px;
@@ -50,35 +24,23 @@
     }
   }
 
-  .header{
-    display:block;
-  }
-
-  .footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin-bottom: 15px;
-    margin-top: 50px;
-  }
-
-  .cards {
-    display: flex;
-    justify-content: center;
-    flex-flow: row wrap;
+  .header {
+    display: block;
   }
 }
+
 @media screen and (max-width: 1100px) {
   .SelectProduct {
     max-width: 750px;
   }
 }
+
 @media screen and (max-width: 850px) {
   .SelectProduct {
     max-width: 500px;
   }
 }
+
 @media screen and (max-width: 500px) {
   .SelectProduct {
     max-width: 250px;
