--- a/src/projects/detail/containers/Specification.scss
+++ b/src/projects/detail/containers/Specification.scss
@@ -103,11 +103,13 @@ $title-color: $tc-gray-80;
     padding: 15px 0;
     position: relative;
 
-    .screen-title, .project-name {
+    .screen-title,
+    .project-name {
       @include roboto;
       color: black;
       font-weight: bold;
     }
+
     .screen-title {
       font-size: 18px;
     }
@@ -148,10 +150,12 @@ $title-color: $tc-gray-80;
 
   .sub-title {
     margin: 50px 0 20px;
+
     .title {
       font-size: 15px;
       line-height: 25px;
       color: $tc-gray-80;
+
       span {
         color: $tc-orange;
         font-size: 15px;
@@ -159,6 +163,7 @@ $title-color: $tc-gray-80;
       }
     }
   }
+
   .container {
     @include flexBox;
     background-color: transparent;
@@ -184,7 +189,7 @@ $title-color: $tc-gray-80;
     }
 
     .right-area {
-      @include flexWidth(2);
+      flex: auto;
       border-radius: 4px;
       position: relative;
 
@@ -379,14 +384,14 @@ $title-color: $tc-gray-80;
     }
   }
 
-  .section-header  {
+  .section-header {
     display: flex;
     justify-content: space-between;
 
     .section-number {
       @include tc-label-lg;
       color: $tc-gray-30;
-      padding-right: 6*$base-unit;
+      padding-right: 6 * $base-unit;
     }
   }
 
@@ -823,7 +828,7 @@ $title-color: $tc-gray-80;
     height: 100%;
     align-self: flex-end;
     border-bottom: 1px solid $tc-gray-40;
-    padding: 0px 2*$base-unit;
+    padding: 0px 2 * $base-unit;
     position: relative;
 
     .refcode-desc {
@@ -865,8 +870,8 @@ $title-color: $tc-gray-80;
   -webkit-flex: initial;
   flex: initial;
   margin-right: 20px;
-  height:155px;
-  width:135px;
+  height: 155px;
+  width: 135px;
   border: 1px solid $tc-gray-20;
   border-radius: 4px;
   cursor: pointer;
@@ -876,20 +881,24 @@ $title-color: $tc-gray-80;
   margin: 10px 10px 0;
   position: relative;
   vertical-align: top;
+
   .check-mark {
     display: none;
   }
+
   &.disabled {
-    opacity: 0.3
+    opacity: 0.3;
   }
+
   &:hover {
     border-color: $tc-dark-blue-70;
     cursor: pointer;
   }
 
-  &.active{
+  &.active {
     background: $tc-gray-10;
     border-color: $tc-gray-10;
+
     &:after {
       content: '';
       display: block;
@@ -898,9 +907,10 @@ $title-color: $tc-gray-80;
       right: 10px;
       width: 15px;
       height: 15px;
-      background: #1A85FF;
+      background: #1a85ff;
       border-radius: 2px;
     }
+
     &:before {
       content: '';
       position: absolute;
@@ -917,32 +927,34 @@ $title-color: $tc-gray-80;
       -ms-transform: rotate(45deg);
       -webkit-transform: rotate(45deg);
     }
+
     &:hover {
       border-color: $tc-gray-10;
     }
   }
 
-  span.title{
-    display:block;
+  span.title {
+    display: block;
     margin-top: 20px;
     @include roboto-bold;
     color: $tc-black;
     font-size: 13px;
-    text-align:center;
+    text-align: center;
   }
 
   span.icon {
     text-align: center;
-    display:block;
+    display: block;
     height: 50px;
-    margin:30px auto 20px auto;
+    margin: 30px auto 20px auto;
   }
+
   small {
-    display:block;
+    display: block;
     font-size: 11px;
-    text-align:center;
+    text-align: center;
     color: $tc-gray-50;
     @include roboto;
-    margin-top:10px;
+    margin-top: 10px;
   }
 }
